# Gazebo-SIm-Triangulation

./: README.md
mocap_ir_ros2/: CMakeLists.txt  package.xml
mocap_ir_ros2/config/: camera_bridge.yaml
mocap_ir_ros2/launch/: mocap_ir.launch.py
mocap_ir_ros2/worlds/: mocap_ir.sdf  thermal.sdf
thermal_3d_localization/: package.xml  setup.cfg  setup.py
thermal_3d_localization/config/: cam1.yaml  cam2.yaml  cam3.yaml  cam4.yaml  cam5.yaml  cam6.yaml  cam7.yaml  cam8.yaml  camera-params.json
thermal_3d_localization/launch/: all.launch.py
thermal_3d_localization/resource/: thermal_3d_localization
thermal_3d_localization/test/: test_thermal_detector.py  test_validation.py
thermal_3d_localization/thermal_3d_localization/: helper.py  thermal_detector.py  triangulation_node.py  visualization.py
