<?xml version="1.0"?>
<package format="3">
  <name>thermal_3d_localization</name>
  <version>0.1.0</version>
  <description>3D localization of thermal target via four cameras</description>
  <maintainer email="you@domain.com">Maintainer Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
